--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <p class="job">Ca sĩ chuyên nghiệp</p>
                     <div class="button">
                         <a href="#about-me"><button class="btn contact">About me</button></a>
-                        <a href="#contact"><button class="btn contact">Contact</button></a>
+                        <a href="#contact-me"><button class="btn contact">Contact</button></a>
                     </div> 
                     <div class="infor">
                         <a href="https://www.facebook.com/profile.php?id=100019316326805"  target="_blank" class="infor-link">
@@ -112,7 +112,7 @@
                     <p class="job">Đầu bếp 5 <i class="star fa-solid fa-star"></i></p>
                     <div class="button">
                         <a href="#about-me"><button class="btn contact">About me</button></a>
-                        <a href="#contact"><button class="btn contact">Contact</button></a>
+                        <a href="#contact-me"><button class="btn contact">Contact</button></a>
                     </div> 
                     <div class="infor">
                         <a href="https://www.facebook.com/profile.php?id=100019316326805"  target="_blank" class="infor-link">
@@ -133,7 +133,7 @@
                     <p class="job">Người mẫu tự do</p>
                     <div class="button">
                         <a href="#about-me"><button class="btn contact">About me</button></a>
-                        <a href="#contact"><button class="btn contact">Contact</button></a>
+                        <a href="#contact-me"><button class="btn contact">Contact</button></a>
                     </div>  
                     <div class="infor">
                         <a href="https://www.facebook.com/profile.php?id=100019316326805"  target="_blank" class="infor-link">
