--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                 </div>
         </section>
         <section class="footer">
-            <video width="620" height="440" controls >
+            <video width="620" height="440" controls onloadstart="this.volume=0">
                 <source src="./assets/radio/SnPanh.mp4" type="video/mp4">
             
             </video>
