--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             </div>
         </div>
         <p class="wish none">Chúc mừng sinh nhật Panh, chúc Panh có 1 ngày sinh nhật vui vẻ bên người thân và bạn bè
-            , gặt hái được nhiều thành công trong cuộc sống, và đặc biệt là luôn cười lên nha. Cảm ơn Panh rất nhiều
+            , gặt hái được nhiều thành công trong cuộc sống, và đặc biệt là luôn cười lên nha. Cảm ơn Panh rất nhiều. Love you <3.
         </p>
         </section>
         <section class="skill"> 
